fixed scrolling on mobile (with active items)

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,6 @@
 
 @layer base {
   body {
-    @apply bg-LightGray text-DarkGrayishBlue;
+    @apply bg-White text-DarkGrayishBlue;
   }
 }
